--- a/hugo.toml
+++ b/hugo.toml
@@ -31,10 +31,14 @@ description = "Tung Kieu's Personal Website"
 keywords = "blog, researcher, personal"
 info = ["Researcher", "Department of Computer Science, Aalborg University", "Pauca sed Matura"]
 avatarURL = "images/profile.jpg"
-#gravatar = "tungk@gmail.com"
+logo="images/logo.gif"
+# gravatar = "tungk@gmail.com"
 dateFormat = "January 2, 2006"
 since = 2024
 math = true
+faviconSVG = "/img/favicon.svg"
+favicon_32 = "/img/favicon-32x32.png"
+favicon_16 = "/img/favicon-16x16.png"
 # Git Commit in Footer, uncomment the line below to enable it
 # commit = "https://github.com/luizdepra/hugo-coder/tree/"
 # Right To Left, shift content direction for languages such as Arabic
